# Automaton

./: .gitignore  LICENSE  README.md
.claude/skills/maui-ai-debugging/: .skill-version  SKILL.md
.claude/skills/maui-ai-debugging/references/: linux.md  macos.md
.github/: copilot-instructions.md
.github/workflows/: haskell.yml  maui.yml
automaton-designer/: .dockerignore  Dockerfile  LICENSE  README.md  automaton-designer.cabal  cabal.project  stack.yaml
automaton-designer/app/: Main.hs
automaton-designer/app/UI/: Auth.hs  Handlers.hs  Server.hs
automaton-designer/examples/: enfa-example.atm  nfa-example.atm  simple-dfa.atm
automaton-designer/src/Automaton/: Converter.hs  LLM.hs  Parser.hs  Serializer.hs  Simulator.hs  Types.hs  Validator.hs
automaton-designer/static/: canvas.js  index.html  style.css
automaton-designer/test/: ConverterSpec.hs  ParserSpec.hs  SimulatorSpec.hs  Spec.hs  ValidatorSpec.hs
automaton-maui/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  AutomatonDesigner.csproj  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  README.md  automaton-maui.sln
automaton-maui/Core/: AutomatonParser.cs  Converter.cs  Simulator.cs  Validator.cs
automaton-maui/Models/: AutomatonTypes.cs
automaton-maui/Services/: AppViewModel.cs  LLMService.cs  SettingsService.cs
automaton-maui/UI/Controls/: AutomatonCanvasDrawable.cs
automaton-maui/UI/Converters/: Converters.cs
automaton-maui/ViewModels/: ChatViewModel.cs
automaton-maui/Views/: AboutPage.xaml  AboutPage.xaml.cs  ChatPage.xaml  ChatPage.xaml.cs  LearnPage.xaml  LearnPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs
